welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: value =< is not a member of Int
if ((100 - n ) =< 10 || (200 - n) < 10) {
               ^